Stop the white flicker on load

--- a/Source_Assets/css/_theme.scss
+++ b/Source_Assets/css/_theme.scss
@@ -10,6 +10,7 @@ body {
     background-image: url("/img/background.webp");
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: $black;
     color: $colour-white;
     font-family: 'Montserrat';
     padding: 0px;
